# consultoria

./: .env  .gitignore  app_streamlit.py  credentials.json  postgres_tools.py  servidor.py
deploy/: agent.py  app_01.py  app_streamlit.py  drive_loader.py  pyproject.toml  servidor.py  styles.py  test_doc.py  test_drive.py  test_methods.py  test_sig.py
deploy/prompts/: memoria.md  postgres_agent.md  schema_context.md
deploy/tmp/: agent.db
deploy/tmp/chromadb/: chroma.sqlite3
prompts/: postgres_agent.md
tmp/: agent.db
